# mozio

./: .coveragerc  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  pyproject.toml
project/: settings.py  urls.py
project/project/: settings.py
project/settings/: base.py  dev.py  prod.py
provider/: models.py
provider/api/: serializers.py  urls.py  views.py
provider/migrations/: 0001_initial.py  0002_auto_20220608_0042.py  0003_alter_provider_currency.py  0004_alter_provider_currency.py  0005_auto_20220609_0415.py  0006_auto_20220609_0443.py
tests/: test_models.py  test_serializers.py  test_urls.py  test_views.py
