[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Lucas <lucasmiguelmac@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2"
psycopg2-binary = "^2.9.3"
django-cors-headers = "^3.11.0"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]
django-extensions = "^3.1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
