[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Lucas <lucasmiguelmac@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2"
psycopg2-binary = "^2.9.3"
django-cors-headers = "^3.11.0"
djangorestframework = "^3.13.1"
six = "^1.16.0"
idna = "^3.3"
django-phonenumber-field = "^6.1.0"
phonenumbers = "^8.12.49"
babel = "^2.10.1"

[tool.poetry.dev-dependencies]
django-extensions = "^3.1.5"
pre-commit = "^2.19.0"
autopep8 = "^1.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
